# Zif

./: .gitignore  .travis.yml  BATCH_BUILD.sh  BUILD_ANDROID.env  BUILD_ANDROID_AARCH32.env  BUILD_ANDROID_AARCH64.env  BUILD_ANDROID_ARM.env  BUILD_ANDROID_ARM64.env  BUILD_DEFAULT.env  BUILD_DEFAULT.sh  BUILD_EMSCRIPTEN.env  BUILD_IOS_ARM64.env  BUILD_IOS_ARM64.sh  BUILD_IOS_ARMv7.env  BUILD_IOS_ARMv7.sh  BUILD_IOS_X86_64.env  BUILD_IOS_X86_64.sh  BUILD_KINDLE3.env  CMakeLists.txt  Config.oil  Doxyfile  Games  LICENSE  README  README.md  SConstruct  TermConfig.xml  update.tin  zif.cfg
Game/: ConsoleGame.h
Game/zif/: ZConsole.cpp  ZConsole.h  ZHeader.h  ZLauncher.h  ZMachine.h  ZOptions.h  ZStack.h  ZState.h  ZStream.cpp  ZStream.h  ZText.h  ZWindow.h  ZifVersion.h  zif.cpp
Games/: list
Scripts/: batt.tin  help.tin  quit.tin
Source/: Console.cpp  Console.h  ConsoleIf.h  ConsoleImpl.cpp  ConsoleImpl.h  Error.h  InfoPage.h  Launcher.h  Log.h  Options.h  Page.h  ZConfig.h  ZConsole.cpp  ZConsole.h  ZConsoleIf.h  ZDecoder.h  ZError.h  ZHeader.h  ZLauncher.h  ZLog.cpp  ZLog.h  ZMachine.h  ZMemory.h  ZObject.h  ZOptions.h  ZParser.h  ZState.h  ZStream.cpp  ZStream.h  ZText.h  ZWindow.h  ZWindowManager.h  zcrape.cpp  zdmp.cpp  zif.cpp
Source/Glulx/: Disassembler.h  Header.h  Machine.h  State.h  Story.h
Source/Level9/: Header.h  Machine.h  State.h  Story.h
Source/Z/: .ZMachine.h.swp  Config.h  Disassembler.h  Header.h  Machine.h  Object.h  Parser.h  Screen.h  State.h  Story.h  Stream.cpp  Stream.h  Text.h  ZBlorb.h  ZConfig.h  ZDisassembler.h  ZHeader.h  ZMachine.h  ZMemory.h  ZObject.h  ZParser.h  ZQuetzal.h  ZScreen.h  ZStack.h  ZState.h  ZStory.h  ZStream.h  ZText.h  ZWindowManager.h
Source/common/: AddHexString.h  Blorb.h  Console.h  ConsoleImpl.cpp  ConsoleImpl.h  Disassembler.h  Log.h  Machine.h  Memory.h  Options.h  Quetzal.h  Random.h  SavableState.h  Stack.h  State.h  Story.h
Source/launcher/: .swp  ButtonItem.h  ConfigPage.h  GamePage.h  HomePage.h  InfoPage.h  Item.h  Launcher.h  Makefile  Page.h  Pipe.h  RestorePage.h  SelectorItem.h  ShellPage.h  Thread.h  TinBash.h  go  go.cpp  tv  tv.cpp
Source/share/: Blorb.h  ConsoleImpl.cpp  ConsoleImpl.h  Disassembler.h  Log.h  Machine.h  Memory.h  Options.h  Quetzal.h  Random.h  SavableState.h  Stack.h  State.h  Story.h  StoryBase.h
Source/test/tpip/: LICENSE
common/STB/: Option.cpp
include/PLT/: Curses.h  Device.h  TerminalPaper.h  TerminalStdio.h
include/STB/: ConsoleApp.h
